# libmwaw

./: .gitignore  CHANGES  CREDITS  HACKING  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac  libmwaw-0.0.pc.in  libmwaw-zip.in  libmwaw.pc.in  libmwaw.spec.in  project.config
autopackage/: default.apspec  default.apspec.in
docs/: Makefile.in  doxygen_api.cfg
docs/doxygen/: Makefile.am  Makefile.in  doxygen.cfg
inc/: Makefile.am  Makefile.in
inc/libmwaw/: MWAWDocument.hxx  MWAWPropertyHandler.hxx  Makefile.am  Makefile.in  libmwaw.hxx
src/: Makefile.am  Makefile.in
src/conv/: Makefile.am  Makefile.in  README
src/conv/csv/: .gitignore  CSVGenerator.cpp  CSVGenerator.h  Makefile.am  Makefile.in  mwaw2csv.cpp  mwaw2csv.rc.in
src/conv/html/: .gitignore  HtmlDocumentGenerator.cpp  HtmlDocumentGenerator.h  Makefile.am  Makefile.in  TableStyle.cpp  TableStyle.h  TextRunStyle.cpp  TextRunStyle.h  mwaw2html.cpp  mwaw2html.h  mwaw2html.rc.in  mwaw2html_internal.cpp  mwaw2html_internal.h
src/conv/raw/: .gitignore  Makefile.am  Makefile.in  RawDocumentGenerator.cpp  RawDocumentGenerator.h  mwaw2raw.cpp  mwaw2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  Makefile.in  mwaw2svg.cpp  mwaw2svg.rc.in
src/conv/text/: .gitignore  Makefile.am  Makefile.in  TextDocumentGenerator.cpp  TextDocumentGenerator.h  mwaw2text.cpp  mwaw2text.rc.in
src/lib/: ACParser.cxx  ACParser.hxx  ACText.cxx  ACText.hxx  ActaParser.cxx  ActaParser.hxx  ActaText.cxx  ActaText.hxx  ApplePictParser.cxx  ApplePictParser.hxx  BWParser.cxx  BWParser.hxx  BWSSParser.cxx  BWSSParser.hxx  BWStructManager.cxx  BWStructManager.hxx  BWText.cxx  BWText.hxx  BeagleWksBMParser.cxx  BeagleWksBMParser.hxx  BeagleWksDBParser.cxx  BeagleWksDBParser.hxx  BeagleWksDRParser.cxx  BeagleWksDRParser.hxx  BeagleWksParser.cxx  BeagleWksParser.hxx  BeagleWksSSParser.cxx  BeagleWksSSParser.hxx  BeagleWksStructManager.cxx  BeagleWksStructManager.hxx  BeagleWksText.cxx  BeagleWksText.hxx  CWDatabase.cxx  CWDatabase.hxx  CWDbaseContent.cxx  CWDbaseContent.hxx  CWGraph.cxx  CWGraph.hxx  CWParser.cxx  CWParser.hxx  (+494 more)
src/tools/: Makefile.am  Makefile.in  README
src/tools/file/: .gitignore  Makefile.am  Makefile.in  file.cpp  file_internal.h  input.cpp  input.h  mwawFile.rc.in  ole.cpp  ole.h  rsrc.cpp  rsrc.h  xattr.cpp  xattr.h
src/tools/zip/: .gitignore  Makefile.am  Makefile.in  input.cpp  input.h  mwawZip.cpp  mwawZip.rc.in  xattr.cpp  xattr.h  zip.cpp  zip.h  zip_internal.h
